lab3/.metadata/.plugins/org.eclipse.cdt.ui/lab3_TLM_gcc_4.8_test1.build.log
22:39:54 **** Incremental Build of configuration Debug for project lab3_TLM_gcc_4.8_test1 ****
make all 
Building file: ../src/lab3_TLM_gcc_4.8_test1.cpp
Invoking: GCC C++ Compiler
g++ -I/home/parallels/Documents/systemC/TLM-2009-07-15/include/tlm/ -I/home/parallels/Documents/systemC/TLM-2009-07-15/include/tlm/tlm_utils -I/usr/local/systemc-2.3.0/include -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/lab3_TLM_gcc_4.8_test1.d" -MT"src/lab3_TLM_gcc_4.8_test1.d" -o "src/lab3_TLM_gcc_4.8_test1.o" "../src/lab3_TLM_gcc_4.8_test1.cpp"
In file included from ../src/lab3_TLM_gcc_4.8_test1.cpp:22:0:
/home/parallels/Documents/systemC/TLM-2009-07-15/include/tlm/tlm_utils/simple_target_socket.h: In instantiation of ‘tlm_utils::simple_target_socket<MODULE, BUSWIDTH, TYPES>::simple_target_socket(const char*) [with MODULE = Memory; unsigned int BUSWIDTH = 32u; TYPES = tlm::tlm_base_protocol_types]’:
../src/lab3_TLM_gcc_4.8_test1.cpp:90:20:   required from here
/home/parallels/Documents/systemC/TLM-2009-07-15/include/tlm/tlm_utils/simple_target_socket.h:64:21: error: ‘bind’ was not declared in this scope, and no declarations were found by argument-dependent lookup at the point of instantiation [-fpermissive]
    bind(m_fw_process);
                     ^
/home/parallels/Documents/systemC/TLM-2009-07-15/include/tlm/tlm_utils/simple_target_socket.h:64:21: note: declarations in dependent base ‘tlm::tlm_base_target_socket<32u, tlm::tlm_fw_transport_if<>, tlm::tlm_bw_transport_if<>, 1, (sc_core::sc_port_policy)0u>’ are not found by unqualified lookup
/home/parallels/Documents/systemC/TLM-2009-07-15/include/tlm/tlm_utils/simple_target_socket.h:64:21: note: use ‘this->bind’ instead
make: *** [src/lab3_TLM_gcc_4.8_test1.o] Error 1

22:39:55 Build Finished (took 1s.122ms)

